<resources>
    <string name="app_name">화면 번역기</string>

    // 로그인 화면
    <string name="sign_in_google">구글 계정으로 시작하기</string>
    <string name="msg_login_id">[email] 으로 로그인 하였습니다.</string>
    <string name="msg_fail_login">로그인에 실패했습니다. 다시 시도해주세요.</string>
    <string name="msg_not_found_id">계정 정보를 찾지 못했습니다. 다시 시도해주세요.</string>
    <string name="msg_fail_create_id">회원가입에 실패했습니다. 다시 시도해주세요.</string>
    <string name="need_login">로그인 하셔야 서비스를 이용하실 수 있습니다.</string>

    // 메인화면
    <string name="remaining_point">잔여 포인트</string>
    <string name="get_rewoad">영상 광고로 포인트 얻기 (150p)</string>
    <string name="success_rewoad">포인트를 획득하였습니다.</string>

    <string name="lang_source">번역 대상 언어</string>
    <string name="lang_target">번역 결과 언어</string>

    <string name="start">시작</string>
    <string name="end">종료</string>

    <string name="zh_cn">중국어 (간체)</string>
    <string name="zh_tw">중국어 (번체)</string>
    <string name="ja">일본어</string>
    <string name="en">영어</string>
    <string name="ko">한국어</string>

    <string name="show_original">원문 표시 여부</string>
    <string name="show">표시</string>
    <string name="hide">표시하지 않음</string>

    <string name="img_size">캡쳐 이미지 사이즈</string>
    <string name="full">화면 전체</string>
    <string name="small">작게(3분의 1 사이즈)</string>

    <string name="sel_trans_api">번역 엔진 선택</string>
    <string name="google">구글 번역기</string>
    <string name="papago">파파고 번역기(개인 key 생성 필요)</string>

    <string name="key_client">클라이언트 key</string>
    <string name="key_secret">시크릿 key</string>

    <string name="msg_key_null">파파고 번역 엔진은 API key 를 입력해주셔야 사용이 가능합니다.</string>
    <string name="help_papago">파파고 API KEY 얻는 방법 보러가기</string>

    <string name="alert">알림</string>
    <string name="msg_exit">정말 종료 하시겠습니까?</string>
    <string name="ok">확인</string>
    <string name="close">닫기</string>
    <string name="cancel">취소</string>

    <string name="start_service">화면 번역기가 실행되었습니다.</string>
    <string name="end_service">화면 번역기가 종료되었습니다.</string>

    <string name="app_version">버전 정보 :</string>

    <string name="msg_help_user">사용 설명</string>
    <string name="msg_help_photo">화면 캡쳐 버튼입니다. 화면이 캡쳐되면 드레그로 영역을 지정하세요.</string>
    <string name="msg_help_trans">번역 버튼입니다. 영역 지정 후 누르시면 해당 영역 내의 글자를 추출하여 번역해드립니다. 번역문구 영역은 터치하면 사라잡니다.</string>
    <string name="msg_help_chat">채팅 번역 기능입니다. 번역하고자 하는 문구를 입력하시면 역으로 번역 후, 자동으로 클립보드로 복사합니다. 타 언어로 채팅을 돕기 위한 기능입니다.</string>
    <string name="msg_help_re">다시 보기 기능입니다. 마지막으로 번역했던 문구를 다시 보여줍니다.</string>
    <string name="msg_help_close">캡쳐 화면 닫기 버튼입니다. 화면 캡쳐 화면을 닫습니다.</string>
    <string name="msg_help_app">본 앱에서 사용하는 OCR, 번역 기능은 구글 유료 API 를 이용합니다.\n때문에 서비스 유지를 위해 광고를 삽입하였습니다.\번역 시 기본 20 포인트와 원문의 글자 당 1 포인트를 소모합니다.(공백포함)\n포인트는 광고 시청으로 획득 가능합니다.</string>

    // 서비스
    <string name="msg_help_service">번역할 영역을 지정하고 돋보기 버튼을 누르세요.</string>
    <string name="msg_missing_points">포인트가 부족합니다. (기본 [point] 포인트 + 번역할 글자 당 1 포인트가 필요합니다.)</string>
    <string name="msg_missing_points_papago">포인트가 부족합니다. ([point] 포인트)</string>

    // 채팅 창
    <string name="msg_chat_hin">완료를 누르시면 복사됩니다.</string>
    <string name="copy_text">번역문이 클립보드에 복사되었습니다.</string>

    // 캔버스 뷰
    <string name="out_area">영역 밖으로 벗어났습니다.</string>
    <string name="select_area">번역할 영역을 먼저 지정해주세요.</string>

    <string name="original">원문</string>
    <string name="translation">번역</string>

    <string name="dont_find_text">영역에서 글자를 찾지 못했습니다.</string>
    <string name="unknown_error">알 수 없는 오류</string>

    <string name="fail_translation">데이터가 없거나 번역에 실패했습니다.</string>
    <string name="fail_translation_papago">파파고 API KEY 를 확인해주세요. 만약 제대로 입력했음에도 오류가 난다면 일일 번역 글자수를 확인해주세요.</string>
    
    <string name="error_capture">화면 캡쳐에 실패했습니다. 계속 같은 오류가 반복된다면 앱을 재실행 해주세요.</string>

    // 인앱 결제 관련
    <string name="point_purchase">포인트 구매</string>
    <string name="success_buy"> 구매에 성공하였습니다!</string>
    <string name="fail_buy">구매에 실패하였습니다. 구매처에 문의주세요.</string>
    <string name="error_msg_1">구매를 취소하였습니다.</string>
    <string name="error_msg_2">구매 중 인터넷 연결에 문제가 발생하였습니다.</string>
    <string name="error_msg_3">요청하신 제품을 구매할 수 없습니다.</string>
    <string name="error_msg_4">구매 처리 중 치명적인 오류가 발생하였습니다.</string>
    <string name="error_msg_5">이미 구매한 내역이므로 구매하실 수 없습니다.</string>
    <string name="error_msg_6">제품 목록 초기화에 실패하였습니다. 네트워크 환경 확인 또는 앱을 재실행 후 다시 시도해주세요.</string>

    <string name="title_notice">공지</string>
    <string name="msg_notice">2개월 간 앱 운영 결과 구글의 유료 API 사용료가 광고 수익보다 높게 청구되어 이대로는 지속적인 운영이 불가능하다고 판단되어 불가피하게 포인트를 유료로 판매하게 되었습니다.\n\n감사합니다.</string>
</resources>
